--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.21.0"
